re-init w/ Dinky theme

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Matt Gaidica
+---
+layout: default
+title: "Home"
+---
+
+<div class="home">
+  <h1>Matt Gaidica</h1>
+  <p>Welcome to my personal site hosted on GitHub Pages using the Dinky Jekyll theme.</p>
+
+  <p>
+    You can edit this page by updating the <code>index.html</code> file in the repository root,
+    and customize global settings in <code>_config.yml</code>.
+  </p>
+</div>
