--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@ title: "Home"
 ---
 
 <div class="home">
-  <h1>Matt Gaidica</h1>
-  <p>Welcome to my personal site hosted on GitHub Pages using the Dinky Jekyll theme.</p>
+  <h1>About Me</h1>
+  <p><strong>I am an Assistant Professor in the Department of Neuroscience at Washington University in St. Louis.</strong> I also serve as the
+  Director of the <a href="https://neurotechhub.wustl.edu/">Neurotech Hub</a>, a new state-of-the-art shop that aims to accelerate ideation, prototyping, and bespoke
+  applications for our research community.</p>
+  
+  <p>In addition to that, I am an officer in the U.S. Air Force Reserve. Across the board, I leverage my background in
+  engineering and science to address extraordinary challenges.</p>
 
-  <p>
-    You can edit this page by updating the <code>index.html</code> file in the repository root,
-    and customize global settings in <code>_config.yml</code>.
-  </p>
+  <h4>Links</h4>
+  <ul>
+    <li><a href="https://github.com/mattgaidica">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/mattgaidica/">LinkedIn</a></li>
+    <li><a href="https://www.amazon.com/Left-History-Hemispheres-Matt-Gaidica/dp/1494984407">My Book</a></li>
+    <li><a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat Brain Atlas</a></li>
+    <li><a href="https://scholar.google.com/citations?user=GhqbKpsAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
+    <li><a href="https://www.dropbox.com/scl/fi/0w0lc3lqvprv2s49xcq1l/matt-gaidica-cv.pdf?rlkey=xj4manm3xguv1wcwv5ddca961&e=1&dl=0">Cirriculum Vitae</a></li>
+  </ul>
 </div>
