--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ title: "Home"
 
   <h4>Links</h4>
   <ul>
-    <li><a href="https://github.com/mattgaidica">GitHub</a></li>
+    <li><a href="https://github.com/mattgaidica">My GitHub</a></li>
+    <li><a href="https://github.com/Neurotech-Hub">Neurotech Hub GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/mattgaidica/">LinkedIn</a></li>
     <li><a href="https://www.amazon.com/Left-History-Hemispheres-Matt-Gaidica/dp/1494984407">My Book</a></li>
     <li><a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat Brain Atlas</a></li>
