Added Flickr albums

--- a/index.html
+++ b/index.html
@@ -14,12 +14,34 @@ title: "Home"
 
   <h4>Links</h4>
   <ul>
-    <li><a href="https://github.com/mattgaidica">My GitHub</a></li>
-    <li><a href="https://github.com/Neurotech-Hub">Neurotech Hub GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/mattgaidica/">LinkedIn</a></li>
     <li><a href="https://www.amazon.com/Left-History-Hemispheres-Matt-Gaidica/dp/1494984407">My Book</a></li>
+    <li>GitHub: <a href="https://github.com/mattgaidica">Matt Gaidica</a> | <a
+        href="https://github.com/Neurotech-Hub">Neurotech Hub</a></li>
     <li><a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat Brain Atlas</a></li>
     <li><a href="https://scholar.google.com/citations?user=GhqbKpsAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
     <li><a href="https://www.dropbox.com/scl/fi/0w0lc3lqvprv2s49xcq1l/matt-gaidica-cv.pdf?rlkey=xj4manm3xguv1wcwv5ddca961&e=1&dl=0">Cirriculum Vitae</a></li>
   </ul>
+
+  <h2>Travelogues</h2>
+  <div class="travelogues">
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330640788" target="_blank">
+        <img src="{{ '/assets/images/annapurna-base-camp.jpg' | relative_url }}" alt="Annapurna Base Camp">
+        <h5>Annapurna Base Camp: A High Altitude Brain Study</h5>
+      </a>
+    </div>
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330619570" target="_blank">
+        <img src="{{ '/assets/images/across-the-alps.jpg' | relative_url }}" alt="Across the Alps">
+        <h5>Across the Alps: Field Testing an Automated Light Perception</h5>
+      </a>
+    </div>
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330619975" target="_blank">
+        <img src="{{ '/assets/images/brains-of-the-yukon.jpeg' | relative_url }}" alt="Brains of the Yukon">
+        <h5>Brains of the Yukon: Physiology and Behavior of Wild Squirrels</h5>
+      </a>
+    </div>
+  </div>
 </div>
