--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: "Home"
     <li><a href="https://www.dropbox.com/scl/fi/0w0lc3lqvprv2s49xcq1l/matt-gaidica-cv.pdf?rlkey=xj4manm3xguv1wcwv5ddca961&e=1&dl=0">Cirriculum Vitae</a></li>
   </ul>
 
-  <h2>Travelogues</h2>
+  <h2>Travelogue</h2>
   <div class="travelogues">
     <div class="travelogue-item">
       <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330640788" target="_blank">
