--- a/index.html
+++ b/index.html
@@ -12,11 +12,42 @@ title: "Home"
   <p>In addition to that, I am an officer in the U.S. Air Force Reserve. Across the board, I leverage my background in
   engineering and science to address extraordinary challenges.</p>
 
+  <div class="timeline">
+    <div class="timeline-item">
+      <div class="timeline-year">2023-Present</div>
+      <div class="timeline-content">
+        <div class="timeline-title">Assistant Professor</div>
+        <div class="timeline-location">Washington University in St. Louis</div>
+      </div>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-year">2020-2023</div>
+      <div class="timeline-content">
+        <div class="timeline-title">NASA-TRISH Postdoctoral Fellow</div>
+        <div class="timeline-location">University of Michigan</div>
+      </div>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-year">2014-2019</div>
+      <div class="timeline-content">
+        <div class="timeline-title">PhD, Neuroscience</div>
+        <div class="timeline-location">University of Michigan</div>
+      </div>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-year">2005-2010</div>
+      <div class="timeline-content">
+        <div class="timeline-title">BS, Electrical Engineering</div>
+        <div class="timeline-location">Kettering University</div>
+      </div>
+    </div>
+  </div>
+
   <h4>Links</h4>
   <ul>
     <li><a href="https://www.linkedin.com/in/mattgaidica/">LinkedIn</a></li>
     <li><a href="https://www.amazon.com/Left-History-Hemispheres-Matt-Gaidica/dp/1494984407">My Book</a></li>
-    <li>GitHub: <a href="https://github.com/mattgaidica">Matt Gaidica</a> | <a
+    <li>GitHub: <a href="https://github.com/mattgaidica">Me</a> | <a
         href="https://github.com/Neurotech-Hub">Neurotech Hub</a></li>
     <li><a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat Brain Atlas</a></li>
     <li><a href="https://scholar.google.com/citations?user=GhqbKpsAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
