faculty profile, mouse brain

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ title: "Home"
         <div class="timeline-content">
           <div class="timeline-title">Assistant Professor</div>
           <div class="timeline-location">Washington University in St. Louis</div>
+          <div class="faculty-profile-link"><a href="https://neuroscience.wustl.edu/people/matt-gaidica-phd/">Faculty Profile</a></div>
         </div>
       </div>
       <div class="timeline-item">
@@ -51,7 +52,7 @@ title: "Home"
         <li><a href="https://www.amazon.com/Left-History-Hemispheres-Matt-Gaidica/dp/1494984407">My Book</a></li>
         <li>GitHub: <a href="https://github.com/mattgaidica">Me</a> | <a
             href="https://github.com/Neurotech-Hub">Neurotech Hub</a></li>
-        <li><a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat Brain Atlas</a></li>
+        <li>Brain Atlas: <a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat</a> | <a href="http://labs.gaidi.ca/mouse-brain-atlas/">Mouse</a></li>
         <li><a href="https://scholar.google.com/citations?user=GhqbKpsAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
         <li><a href="https://www.dropbox.com/scl/fi/0w0lc3lqvprv2s49xcq1l/matt-gaidica-cv.pdf?rlkey=xj4manm3xguv1wcwv5ddca961&e=1&dl=0">Cirriculum Vitae</a></li>
       </ul>
