--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@ title: "Home"
       <ul>
         <li><a href="https://www.linkedin.com/in/mattgaidica/">LinkedIn</a></li>
         <li><a href="https://www.amazon.com/Left-History-Hemispheres-Matt-Gaidica/dp/1494984407">My Book</a></li>
-        <li>GitHub: <a href="https://github.com/mattgaidica">Me</a> | <a
-            href="https://github.com/Neurotech-Hub">Neurotech Hub</a></li>
-        <li>Brain Atlas: <a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat</a> | <a href="http://labs.gaidi.ca/mouse-brain-atlas/">Mouse</a></li>
         <li><a href="https://scholar.google.com/citations?user=GhqbKpsAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
         <li><a href="https://www.dropbox.com/scl/fi/0w0lc3lqvprv2s49xcq1l/matt-gaidica-cv.pdf?rlkey=xj4manm3xguv1wcwv5ddca961&e=1&dl=0">Cirriculum Vitae</a></li>
+        <li>GitHub: <a href="https://github.com/mattgaidica">Me</a> | <a href="https://github.com/Neurotech-Hub">Neurotech
+            Hub</a></li>
+        <li>Brain Atlas: <a href="http://labs.gaidi.ca/rat-brain-atlas/">Rat</a> | <a
+            href="http://labs.gaidi.ca/mouse-brain-atlas/">Mouse</a></li>
       </ul>
     </div>
   </div>
