--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ title: "Home"
     <div class="travelogue-item">
       <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330619570" target="_blank">
         <img src="{{ '/assets/images/across-the-alps.jpg' | relative_url }}" alt="Across the Alps">
-        <h5>Across the Alps: Field Testing an Automated Light Perception</h5>
+        <h5>Across the Alps: Field Testing an Automated Light Perception System</h5>
       </a>
     </div>
     <div class="travelogue-item">
