--- a/index.html
+++ b/index.html
@@ -80,5 +80,17 @@ title: "Home"
         <h5>Brains of the Yukon: Physiology and Behavior of Wild Squirrels</h5>
       </a>
     </div>
+    <div class="travelogue-item">
+      <a href="https://flickr.com/photos/124703994@N04/albums/72177720330760622/" target="_blank">
+        <img src="{{ '/assets/images/experimental-photography.jpg' | relative_url }}" alt="Experimental Photography">
+        <h5>Experimental Photography: Forms & Light</h5>
+      </a>
+    </div>
+    <div class="travelogue-item">
+      <a href="https://flickr.com/photos/124703994@N04/albums/72177720330760657/" target="_blank">
+        <img src="{{ '/assets/images/portraiture.jpg' | relative_url }}" alt="Portraiture">
+        <h5>Portraiture: Photos of Wonderful People</h5>
+      </a>
+    </div>
   </div>
 </div>
