--- a/index.html
+++ b/index.html
@@ -92,5 +92,17 @@ title: "Home"
         <h5>Portraiture: Photos of Wonderful People</h5>
       </a>
     </div>
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330760752/" target="_blank">
+        <img src="{{ '/assets/images/russia-the-enigma.jpg' | relative_url }}" alt="Путешествие Энигма">
+        <h5>Путешествие Энигма</h5>
+      </a>
+    </div>
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330761206" target="_blank">
+        <img src="{{ '/assets/images/lost-in-patagonia.jpg' | relative_url }}" alt="Lost in Patagonia">
+        <h5>Lost in Patagonia</h5>
+      </a>
+    </div>
   </div>
 </div>
