--- a/index.html
+++ b/index.html
@@ -104,5 +104,11 @@ title: "Home"
         <h5>Lost in Patagonia</h5>
       </a>
     </div>
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330761127" target="_blank">
+        <img src="{{ '/assets/images/writing.jpg' | relative_url }}" alt="Writing on Lokta Paper">
+        <h5>Writing on Lokta Paper</h5>
+      </a>
+    </div>
   </div>
 </div>
