--- a/index.html
+++ b/index.html
@@ -106,8 +106,20 @@ title: "Home"
     </div>
     <div class="travelogue-item">
       <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330761127" target="_blank">
-        <img src="{{ '/assets/images/writing.jpg' | relative_url }}" alt="Writing on Lokta Paper">
+        <img src="{{ '/assets/images/m.PNG' | relative_url }}" alt="Writing on Lokta Paper">
         <h5>Writing on Lokta Paper</h5>
+      </a>
+    </div>
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330776143" target="_blank">
+        <img src="{{ '/assets/images/mount-kinabalu.jpg' | relative_url }}" alt="Malaysia & Climbing Mount Kinabalu">
+        <h5>Malaysia & Climbing Mount Kinabalu</h5>
+      </a>
+    </div>
+    <div class="travelogue-item">
+      <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330761127" target="_blank">
+        <img src="{{ '/assets/images/north-to-south-vietnam.jpg' | relative_url }}" alt="North to South Vietnam: A Bike Tour">
+        <h5>North to South Vietnam: A Bike Tour</h5>
       </a>
     </div>
   </div>
