--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ title: "Home"
     </div>
     <div class="travelogue-item">
       <a href="https://www.flickr.com/photos/124703994@N04/albums/72177720330776143" target="_blank">
-        <img src="{{ '/assets/images/mount-kinabalu.jpg' | relative_url }}" alt="Malaysia & Climbing Mount Kinabalu">
-        <h5>Malaysia & Climbing Mount Kinabalu</h5>
+        <img src="{{ '/assets/images/mount-kinabalu.jpg' | relative_url }}" alt="Borneo & Climbing Mount Kinabalu">
+        <h5>Borneo & Climbing Mount Kinabalu</h5>
       </a>
     </div>
     <div class="travelogue-item">
