--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: "Home"
     <div class="travelogue-item">
       <a href="https://flickr.com/photos/124703994@N04/albums/72177720330760622/" target="_blank">
         <img src="{{ '/assets/images/experimental-photography.jpg' | relative_url }}" alt="Experimental Photography">
-        <h5>Experimental Photography: Forms & Light</h5>
+        <h5>Experiments in Photography</h5>
       </a>
     </div>
     <div class="travelogue-item">
