--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ title: "Home"
     </div>
     <div class="travelogue-item">
       <a href="https://flickr.com/photos/124703994@N04/albums/72177720330760622/" target="_blank">
-        <img src="{{ '/assets/images/experimental-photography.jpg' | relative_url }}" alt="Experimental Photography">
-        <h5>Experiments in Photography</h5>
+        <img src="{{ '/assets/images/experimental-photography.jpg' | relative_url }}" alt="Photography Experiments">
+        <h5>Photography Experiments</h5>
       </a>
     </div>
     <div class="travelogue-item">
